--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.8.0",
     "install": "^0.13.0",
-    "npm": "^9.2.0"
+    "npm": "^9.2.0",
+    "solc": "^0.8.17",
+    "@openzeppelin/contracts-upgradeable": "^4.3.2",
+    "@openzeppelin/test-helpers": "^0.5.13",
+    "@openzeppelin/truffle-upgrades": "^1.17.0",
+    "chai": "^4.3.4",
+    "truffle": "^5.4.10"
   }
 }
